--- a/natal.html
+++ b/natal.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="natal.css">
 </head>
 <body>
-<!--    <div class="jd__tree">
+    <div class="jd__tree">
         <div class="main-wrapper">
         <div class="tree-container">
         <div class="star"></div>
@@ -669,7 +669,6 @@
         </div>
         </div>
         </div>
-    -->
 <div class="jd__night"></div>
 <div class="jd__scene">
 <div class="jd__moon"></div>
